After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748822 - pango-layout: fix docs of 'trailing' parameter
pango-layout: fix docs of 'trailing' parameter
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: docs
unspecified
Other All
: Normal normal
: ---
Assigned To: pango-maint
pango-maint
Depends on:
Blocks:
 
 
Reported: 2015-05-03 07:41 UTC by Nelson Benitez
Modified: 2015-05-05 22:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pango-layout: fix docs of 'trailing' parameter (1.39 KB, patch)
2015-05-03 07:41 UTC, Nelson Benitez
none Details | Review

Description Nelson Benitez 2015-05-03 07:41:43 UTC
in pango_layout_index_to_line_x() function, as
it should be in sync with same parameter of
pango_layout_line_index_to_x() function.
Comment 1 Nelson Benitez 2015-05-03 07:41:48 UTC
Created attachment 302788 [details] [review]
pango-layout: fix docs of 'trailing' parameter

in pango_layout_index_to_line_x() function, as
it should be in sync with same parameter of
pango_layout_line_index_to_x() function.
Comment 2 Behdad Esfahbod 2015-05-05 22:04:58 UTC
Should be fixed.  Please check:
https://git.gnome.org/browse/pango/commit/?id=9117a1c6c7717287f2f8d76c5926bd2e5551c52e