Fix leading vs trailing grapheme edge docs

https://bugzilla.gnome.org/show_bug.cgi?id=748822
https://bugzilla.gnome.org/show_bug.cgi?id=744836